fix(bit.fomo) setting main as default to merge