@@ -3,12 +3,21 @@ package com.bitfomo;
 import com.bitfomo.adapters.broker.MessageReceiver;
 import jakarta.jms.JMSException;
 
-import java.util.Collections;
 import java.util.List;
 
 public class Main {
     public static void main(String[] args) throws JMSException {
-        MessageReceiver receiver = new MessageReceiver(Collections.singletonList("CryptoPrice"), "tcp://localhost:61616");
+        if (args.length < 1) {
+            System.err.println("Usage: java -jar event-store-builder.jar <brokerUrl>");
+            System.exit(1);
+        }
+
+        String brokerUrl = args[0];
+
+        List<String> topics = List.of("RedditPost");
+
+        MessageReceiver receiver = new MessageReceiver(topics, brokerUrl);
+
         receiver.start();
     }
 }
